# docs/swagger.yaml
@@ -207,6 +207,60 @@ definitions:
     - last_page
     - total
     type: object
+  permission.HttpApiData:
+    properties:
+      method:
+        type: string
+      path:
+        type: string
+    required:
+    - method
+    - path
+    type: object
+  permission.PermissionCreateData:
+    properties:
+      created_at:
+        format: date-time
+        type: string
+      http_apis:
+        items:
+          $ref: '#/definitions/permission.HttpApiData'
+        type: array
+      id:
+        type: integer
+      name:
+        type: string
+      updated_at:
+        format: date-time
+        type: string
+    required:
+    - created_at
+    - http_apis
+    - id
+    - name
+    - updated_at
+    type: object
+  permission.PermissionCreateRequest:
+    properties:
+      http_apis:
+        items:
+          properties:
+            method:
+              type: string
+            path:
+              type: string
+          required:
+          - method
+          - path
+          type: object
+        minItems: 1
+        type: array
+      name:
+        type: string
+    required:
+    - http_apis
+    - name
+    type: object
   response.Debug:
     properties:
       error:
@@ -496,6 +550,58 @@ paths:
             $ref: '#/definitions/response.ErrorResponse'
       tags:
       - admin-http-api
+  /api/admin/permission:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: csrf token
+        in: header
+        name: X-XSRF-TOKEN
+        required: true
+        type: string
+      - description: bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: create permission
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/permission.PermissionCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/permission.PermissionCreateData'
+              type: object
+        "400":
+          description: 'code: 400-001(create permission failed), 400-002(request validation
+            failed)'
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: 'code: 401-001(access token is wrong)'
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: 'code: 403-001(csrf token mismatch, casbin authorization failed)'
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: 'code: 500-001'
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      tags:
+      - admin-permission
   /api/admin/policy:
     delete:
       consumes:
