# internal/http/route/admin/api_route.go
@@ -2,6 +2,7 @@ package admin
 
 import (
 	httpapi "github.com/ChanJuiHuang/go-backend-framework/internal/http/controller/admin/http_api"
+	"github.com/ChanJuiHuang/go-backend-framework/internal/http/controller/admin/permission"
 	"github.com/ChanJuiHuang/go-backend-framework/internal/http/middleware"
 	"github.com/gin-gonic/gin"
 )
@@ -23,6 +24,7 @@ func NewRouter(router *gin.Engine) *Router {
 func (r *Router) AttachRoutes() {
 	r.router.GET("user/:userId/grouping-policy", admin.GetUserGroupingPolicy)
 	r.AttachHttpApiRoutes()
+	r.AttachPermissionRoutes()
 	r.AttachPolicyRoutes()
 	r.AttachPolicySubjectRoutes()
 	r.AttachGroupingPolicyRoutes()
@@ -31,6 +33,11 @@ func (r *Router) AttachRoutes() {
 func (r *Router) AttachHttpApiRoutes() {
 	httpApiRouter := r.router.Group("http-api")
 	httpApiRouter.GET("", httpapi.Search)
+}
+
+func (r *Router) AttachPermissionRoutes() {
+	permissionRouter := r.router.Group("permission")
+	permissionRouter.POST("", permission.Create)
 }
 
 func (r *Router) AttachPolicyRoutes() {
